--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     container_name: webapp
     entrypoint: /bin/bash -c "chmod +x /webodm/*.sh && /bin/bash -c \"/webodm/wait-for-it.sh db:5432 -- /webodm/start.sh\""
     volumes:
-      - appmedia:/webodm/app/media
+      - /Atlas/Live:/webodm/app/media
     ports:
       - "8000:8000"
     depends_on:
