--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,14 @@ volumes:
     driver: local
 services:
   db:
-    image: opendronemap/webodm_db
+    build: ./db
     container_name: db
     ports:
       - "5432"
     volumes:
       - dbdata:/var/lib/postgresql/data
   webapp:
-    image: mcstrav/webodm_webapp
+    build: .
     container_name: webapp
     entrypoint: /bin/bash -c "chmod +x /webodm/*.sh && /bin/bash -c \"/webodm/wait-for-it.sh db:5432 -- /webodm/start.sh\""
     volumes:
